--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,33 @@
 *.iml
 *.ipr
 *.iws
+
+build
+.gradle
+.gradletasknamecache
+.idea/*
+!.idea/runConfigurations
+!.idea/runConfigurations/*
+!.idea/vcs.xml
+!.idea/dictionaries
+!.idea/dictionaries/*
+out
+*.iml
+.vscode
+
+*.versionsBackup
+*.releaseBackup
+release.properties
+local.properties
+
+.video
+.attach_pid*
+apidoc
+
+
+bin/
+.settings
+.project
+.classpath
+.konan
+.vscode
